# Quadcopter

./: CMakeLists.txt  README.md
include/: AHRS.h  Calibration.h  Common.h  Device.h  EKF_moredeg.h  Error.h  Filter.h  Filter_Digital.h  Filter_Kalman.h  GY80.h  GY80_Address.h  I2CControl.h  I2CDevice.h  Initialization.h  PCA9685PW.h  PCA9685PW_Address.h  PID.h  Quaternion.h  RF24_Interface.h  RF24_config.h  SPIControl.h  Setup.h  UKF.h  compatibility.h  lu.h  main.h
include/RF24/: RF24.h  RF24_config.h  compatibility.h  includes.h  spi.h
include/backup/: EKF.h
script/: drone.sh
src/: AHRS.c  CMakeLists.txt  Calibration.c  Common.c  Control.c  Data.c  Device.c  EKF.c  EKF_moredeg.c  Euler.c  EulerAngle.c  Filter.c  Filter_Digital.c  Filter_Kalman.c  GY80.c  I2CControl.c  I2CControl.c.save.1  I2CControl.c_bk  Initialization.c  MCP3008.c  PCA9685PW.c  PID.c  Quaternion.c  RF24.cpp  RF24_Interface.cpp  SPIControl.c  SPIControl.cpp  Setup.c  compatibility.c  lu.c  main.c  main.c_backup  main.c_pwmbackup  spi.cpp
src/backup/: EKF.c  EulerAngle.c  GY80.c  Initialization.c  Setup.c  UKF.c
