include_directories(${QUADCOPTER_SOURCE_DIR}/include)
add_library(I2CDEVICE GY80.c PCA9685PW.c I2CControl.c)
link_directories(${QUADCOPTER_SOURCE_DIR}/src)
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
SET(BUILD_SHARED_LIBRARIES OFF)
SET(CMAKE_EXE_LINKER_FLAGS "-static")
add_executable(QUADCOPTER Setup.c Common.c Initialization.c Filter.c Calibration.c EulerAngle.c EKF.c Quaternion.c lu.c main.c)
target_link_libraries(QUADCOPTER I2CDEVICE -lbcm2835 -lfgsl -lfgslcblas -lrt -lm -lpthread -std=c99 -O3)
